--- a/compose.yaml
+++ b/compose.yaml
@@ -3,12 +3,12 @@ version: '3'
 services:
 ###> doctrine/doctrine-bundle ###
   database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
+    image: postgres
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-warenkorb}
+      POSTGRES_DB: warenkorb
       # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-asgoodasnew}
-      POSTGRES_USER: ${POSTGRES_USER:-bm}
+      POSTGRES_PASSWORD: asgoodasnew
+      POSTGRES_USER: bm
     volumes:
       - database_data:/var/lib/postgresql/data:rw
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
