--- a/composer.json
+++ b/composer.json
@@ -68,5 +68,12 @@
             "allow-contrib": false,
             "require": "6.0.*"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "6.0.*",
+        "symfony/css-selector": "6.0.*",
+        "symfony/maker-bundle": "*",
+        "symfony/phpunit-bridge": "^7.0"
     }
 }
